feat: написал ReadingProfileServiceImplTest